# msgpack-rpc

./: NOTICE  README.md  spec.md
cpp/: .gitignore  ChangeLog  Makefile.am  NOTICE  README.md  bootstrap  configure.in  mpl.rb  mplex  preprocess
cpp/src/: Makefile.am
cpp/src/cclog/: Makefile.am  cclog.cc  cclog.hmpl  cclog_null.cc  cclog_null.h  cclog_ostream.cc  cclog_ostream.h  cclog_syslog.cc  cclog_syslog.h  cclog_tty.cc  cclog_tty.h
cpp/src/msgpack/rpc/: Makefile.am  address.cc  address.h  caller.hmpl  client.cc  client.h  dispatcher.h  exception.cc  exception.h  exception_impl.h  future.cc  future.h  future_impl.h  impl_fwd.h  loop.h  loop_util.h  message.h  message_sendable.h  option.h  protocol.h  reqtable.cc  reqtable.h  request.cc  request.h  request_impl.h  server.cc  server.h  server_impl.h  session.cc  session.h  session_impl.h  session_pool.cc  session_pool.h  session_pool_impl.h  tcp.cc  tcp.h  transport.h  transport_impl.h  types.h  version.c  (+1 more)
cpp/src/msgpack/rpc/transport/: base.h  listener.h  tcp.cc  tcp.h  udp.cc  udp.h  unix.cc  unix.h
cpp/test/: Makefile.am  async_call.cc  async_server.cc  attack.h  attack_callback.cc  attack_connect.cc  attack_huge.cc  attack_pipeline.cc  callback.cc  echo_server.h  error.cc  notify.cc  run_heavy_attack.sh  sync_call.cc  udp.cc  unix.cc
erlang/: .gitignore  Makefile  OMakefile  OMakeroot  README  README.md  mp_client.erl  rebar.config  test_server.rb
erlang/ebin/: mp_server.app  mp_testapp.app  msgpack_rpc.app  sample_app.app
erlang/scripts/: setup.es  test_server.rb
erlang/src/: mp_client.erl  mp_rpc.hrl  mp_server.erl  mp_server_app.erl  mp_server_listener_sup.erl  mp_server_session_sup.erl  mp_server_srv.erl  mp_server_sup.erl  mp_server_sup2.erl  mp_session.erl  mp_sessions.erl  mp_tcp_listener.erl  mp_test_app.erl  msgpack.erl  msgpack_rpc.app.src  msgpack_rpc.erl  overview.edoc  sample_app.erl  sample_client.erl  sample_srv.erl
erlang/test/: client_SUITE.erl  my.coverspec  sample_SUITE.erl
go/example/: sample_mprpc.go
go/rpc/: Makefile  README  client.go  rpc.go  server.go  server_test.go
haskell/: LICENSE  msgpack-rpc.cabal
haskell/src/Network/MessagePackRpc/: Client.hs  Server.hs
haskell/test/: Cli.hs  Serv.hs
idl/: ChangeLog  Gemfile  Makefile.am  README.md  ast.rb  bootstrap  command.rb  configure.in  mplex.rb  mprpc_ast.rb  mprpc_ast_impl.rb  mprpc_idl.tt.mpl  mprpcgen.rb  parser.tt.mpl  preprocess  preprocess.mk
idl/lang/: cpp.rb  java.rb  lang.rb  python.rb  ruby.rb
idl/lang/cpp/: common.mpl  header.mpl  headers.mpl  service.mpl  service_client.mpl  service_server.mpl  service_source.mpl  source.mpl  types.mpl
idl/lang/java/: common.mpl  const.mpl  enum.mpl  field.rb  struct.mpl
idl/lang/python/: common.mpl  requires.mpl  service.mpl  service_client.mpl  service_server.mpl  types.mpl
idl/lang/ruby/: client.mpl  common.mpl  requires.mpl  server.mpl  service.mpl  service_client.mpl  service_server.mpl  types.mpl
idl/test/: Makefile.am  exception.mprpc  exception.rb
java/: .gitignore  CHANGES.txt  README.md  pom.xml
java/src/main/java/org/msgpack/rpc/: Address.java  App.java  ArgumentError.java  Callback.java  Client.java  Constants.java  Dispatcher.java  EventLoop.java  Future.java  FutureImpl.java  IPAddress.java  MessageSendable.java  NoMethodError.java  NotificationMessage.java  RPCError.java  ReflectionDispatcher.java  RemoteError.java  Request.java  RequestMessage.java  ResponseMessage.java  Server.java  Session.java  SessionPool.java  TimeoutError.java  TransportError.java
java/src/main/java/org/msgpack/rpc/address/: Address.java  IPAddress.java
java/src/main/java/org/msgpack/rpc/builder/: DefaultDispatcherBuilder.java  DispatcherBuilder.java  StopWatchDispatcherBuilder.java
java/src/main/java/org/msgpack/rpc/client/: Address.java  Client.java  EventLoop.java  Future.java  RPCException.java  Session.java  TCPClient.java  TCPSocket.java  TCPTransport.java  Transport.java  UDPClient.java
java/src/main/java/org/msgpack/rpc/config/: ClientConfig.java  ServerConfig.java  StreamClientConfig.java  TcpClientConfig.java  TcpServerConfig.java
java/src/main/java/org/msgpack/rpc/dispatcher/: Dispatcher.java  MethodDispatcher.java  (+1 more)
java/src/main/resources/: log4j.properties
java/src/test/java/org/msgpack/rpc/: AppTest.java  BigDataTest.java  DecoratorTest.java  FutureTest.java  MethodTest.java  MultiThreadServerTest.java  ReconnectionTest.java  ServerErrorTest.java  ServerMock.java  ServerTest.java  SessionPoolTest.java
java/testInRealWorld/: pom.xml
php/: MsgPackAddress.php  MsgPackClient.php  MsgPackFuture.php  MsgPackLoop.php  MsgPackSession.php  MsgPackTCPTransport.php  MsgPackTcpSocket.php  example.php
php/MessagePackRPC/: Address.php  Client.php  Future.php  Loop.php  Server.php  Session.php  TCPSocket.php  TCPTransport.php  example.php
php/lib/: Back.php  Client.php  Error.php  Future.php  Server.php
php/test/: client.php  php.ini  server.php  test.php
python/: .gitignore  README  setup.py
python/mprpc/: __init__.py
python/mprpc/rpc/: __init__.py  address.py  client.py  future.py  loop.py  session.py  socket.py  transport.py
python/msgpackrpc/client/: __init__.py  address.py  client.py
python/msgpackrpc/client/twisted/: __init__.py  client.py  loop.py  session.py  transport.py
python/msgpackrpc/rpc/: future.py
python/msgpackrpc/server/: __init__.py
python/msgpackrpc/transport/: tcp.py
python/test/: echoserver.py  test_client.py
ruby/: ChangeLog  NOTICE  README  Rakefile  msgpack-rpc.gemspec  msgpack.gemspec
ruby/lib/: msgpack-rpc.rb
ruby/lib/msgpack/: rpc.rb
ruby/lib/msgpack/rpc/: address.rb  client.rb  dispatcher.rb  exception.rb  future.rb  loop.rb  marshal.rb  message.rb  multi_future.rb  server.rb  session.rb  session_pool.rb  version.rb
ruby/lib/msgpack/rpc/transport/: base.rb  tcp.rb  udp.rb  unix.rb
ruby/spec/: spec.opts
ruby/spec/unit/: client_spec.rb  my_server.rb  spec_helper.rb
ruby/tasks/: msgpack_rpc_tasks.rake
ruby/test/: msgpack_rpc_marshal_test.rb  msgpack_rpc_test.rb  test_helper.rb
(+99 files in other folders)
