Name:                msgpack-rpc
Version:             0.3.1
Synopsis:            A MessagePack-RPC Implementation
Description:
  A MessagePack-RPC Implementation http://msgpack.org/

License:             BSD3
License-file:        LICENSE
Copyright:           Copyright (c) 2010, Hideyuki Tanaka
Category:            Network
Author:              Hideyuki Tanaka
Maintainer:          tanaka.hideyuki@gmail.com
Homepage:            http://github.com/msgpack/msgpack-rpc
Stability:	     Experimental
Tested-with:	     GHC == 6.12.3
Cabal-version:       >=1.2
Build-type:          Simple

Library
  Build-depends:     base>=4 && <5,
                     network,
                     random,
                     mtl,
                     transformers >= 0.2.1 && < 0.2.2,
                     msgpack >= 0.3.1 && < 0.4

  Ghc-options:	     -O2 -Wall
  Hs-source-dirs:    src

  Exposed-modules:
    Network.MessagePackRpc.Server
    Network.MessagePackRpc.Client
