Name:                msgpack-rpc
Version:             0.3.1.1
Synopsis:            A MessagePack-RPC Implementation
Description:
  A MessagePack-RPC Implementation <http://msgpack.org/>

License:             BSD3
License-file:        LICENSE
Copyright:           Copyright (c) 2010, Hideyuki Tanaka
Category:            Network
Author:              Hideyuki Tanaka
Maintainer:          Hideyuki Tanaka <tanaka.hideyuki@gmail.com>
Homepage:            http://github.com/msgpack/msgpack-rpc
Stability:	     Experimental
Cabal-version:       >=1.6
Build-type:          Simple

Library
  Build-depends:     base >= 4 && <5,
                     msgpack >= 0.3.1 && < 0.4,
                     network >= 2.2.1.7 && < 2.2.2,
                     random >= 1.0.0.2 && < 1.1,
                     transformers >= 0.2.1 && < 0.2.2,
                     iteratee >= 0.4.0.2 && < 0.4.1,
                     deepseq >= 1.1 && < 1.2

  Ghc-options:	     -Wall
  Hs-source-dirs:    src

  Exposed-modules:
    Network.MessagePackRpc.Server
    Network.MessagePackRpc.Client

Source-repository head
  Type:     git
  Location: git://github.com/msgpack/msgpack-rpc.git
