Name:                msgpack-rpc
Version:             0.6.1.1
Synopsis:            A MessagePack-RPC Implementation
Description:
  A MessagePack-RPC Implementation <http://msgpack.org/>

License:             BSD3
License-file:        LICENSE
Copyright:           Copyright (c) 2010, Hideyuki Tanaka
Category:            Network
Author:              Hideyuki Tanaka
Maintainer:          Hideyuki Tanaka <tanaka.hideyuki@gmail.com>
Homepage:            http://github.com/msgpack/msgpack-rpc
Stability:	      Experimental
Cabal-version:       >=1.6
Build-type:          Simple

Extra-source-files:
  test/Serv.hs
  test/Cli.hs

Library
  Build-depends:     base >= 4 && < 5,
                     bytestring >= 0.9 && < 0.10,
                     network >= 2.2 && < 2.4,
                     random >= 1.0 && < 1.1,
                     enumerator >= 0.4 && < 0.5,
                     attoparsec-enumerator >= 0.2 && < 0.3,
                     msgpack >= 0.6 && < 0.7,
                     transformers >= 0.2 && < 0.3,
                     deepseq >= 1.1 && < 1.2

  Ghc-options:       -Wall
  Hs-source-dirs:    src

  Exposed-modules:
    Network.MessagePackRpc.Server
    Network.MessagePackRpc.Client

Source-repository head
  Type:     git
  Location: git://github.com/msgpack/msgpack-rpc.git
